--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="og:title" content="르탄이 - 프로필 링크" />
-        <meta property="og:description" content="어서와 코딩은 처음이지?" />
+        <meta property="og:title" content="냐옹이 - 프로필 링크" />
+        <meta property="og:description" content="디자인 문의 및 구매" />
         <meta property="og:image" content="공유할 이미지" />
-        <title>르탄이 - 프로필 링크</title>
+        <title>냐옹이 - 프로필 링크</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
             * {
@@ -80,7 +80,7 @@
             <a target="_blank" href="https://spartacodingclub.kr/">스마트스토어</a>
             <a target="_blank" href="https://pf.kakao.com/_xcfZhxj">카카오채널상담</a>
             <a target="_blank" href="https://instagram.com/niaong.i">인스타그램</a>
-            <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">DM문의</a>
+           
         </div>
     </body>
 </html>
