--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="profile"></div>
             <h1 class="main">냐옹이</h1>
             <p class="sub">@niaong.i</p>
-            <a target="_blank" href="https://spartacodingclub.kr/">스마트스토어</a>
+            <a target="_blank" href="https://smartstore.naver.com/niaongi/products/6952296038">스마트스토어</a>
             <a target="_blank" href="https://pf.kakao.com/_xcfZhxj">카카오채널상담</a>
             <a target="_blank" href="https://instagram.com/niaong.i">인스타그램</a>
            
