--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 font-family: "Pretendard",serif;
             }
            body{
-            background-color:#f3c9e5;
+            background-color:#f7d6ec;
            }
            .profile{
             width:100px;
